--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.32.0",
     "axios": "^1.6.8",
+    "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,7 @@
     "@zeustech/eslint-config": "^1.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
+    "jest": "^29.7.0",
     "typescript": "^5"
   }
 }
