--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -26,6 +27,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
